--- a/thesis/intro/intro.tex
+++ b/thesis/intro/intro.tex
@@ -3,21 +3,27 @@
 \graphicspath{{im/}{intro/im/}}
 \chapter{Introduction}
 \section{Impact of HIV}
-	In 1981, physicians began to notice a unexplained increase in the occurrences of Kaposi's sarcoma and pneumocystis pneumonia \citep{Gottlieb1981,Friedman-Kien1981,Hymes1981,Masur1981,Siegal1981,Gottlieb1981a}. 
+	In 1981, physicians began to notice a mysterious increase in the occurrences, often clustered in men who had sex with men or intravenous drug users, of Kaposi's sarcoma and pneumocystis pneumonia \citep{Gottlieb1981,Friedman-Kien1981,Hymes1981,Masur1981,Siegal1981,Gottlieb1981a}. 
 	
-	Kaposi's sarcoma was a rare cancer in the US found largely in elderly men with Jewish or Mediterranean ancestry \citep{Laor1979}. Kaposi's sarcoma had also been seen in immunocompromised individuals \citep{Klein1974,Myers1974,Kapadia1977} and there were suggestions that Kaposi's sarcoma was a virus-associated cancer \citep{Safai1981} although the causative human herpesvirus 8 would not be discovered for another decade \citep{Chang1994,Sitas1999}. 
+	Kaposi's sarcoma had been a rare cancer in the US found largely in elderly men with Jewish or Mediterranean ancestry \citep{Laor1979}. Kaposi's sarcoma had also been seen in immunocompromised individuals \citep{Klein1974,Myers1974,Kapadia1977} and there were suggestions that it was a virus-associated cancer \citep{Safai1981} although the causative human herpesvirus 8 would not be discovered for another decade \citep{Chang1994,Sitas1999}. 
 	
-	Pneumocystis pneumonia \citep{Burke1973,Hughes1977}
+	Pneumocystis pneumonia was known to be caused by infection of the alveoli with the yeast-like fungus \emph{Pneumocystis jirovecii} \citep{Burke1973,Hughes1977}, previously known as \emph{Pneumocystis carinii} \citep{Stringer2009}. Pneumocystis pneumonia was almost exclusively seen patients with suppressed immune systems or immune disorders and rarely if ever in immunocompetent individuals \citep{Hughes1977}.
+
+	The mechanism for this spike of these opportunistic infection was clarified when researchers found severe T cells depletion and decreases in cellular immunity in these patients \citep{Masur1981,Siegal1981,Gottlieb1981a,Gerstoft1982,Masur1982} but the underlying cause remained unclear and eventually termed acquired immune deficiency syndromek. Potential transmissions by transfusion \citep{Ammann1982,Ehrenkranz1982}, injection drug use \citep{Masur1981,Masur1982,Greene1982} and both homosexual \citep{Fannin1982,Gerstoft1982} and heterosexual \citep{Masur1982,Harris1983} contact pointed towards a transmissible agents [[double transmission]]. A virus named lymphadenopathy-associated virus or human T-lymphotropic viruses III and later renamed human immunodefficiency virus was isolated from patient samples in 1983 \citep{Barre-Sinoussi1983,Popovic1984,Levy1984} and soon detected in most immunodeficient patients \citep{Gallo1984,Sarngadharan1984,Safai1984,Levy1984}. The virus was sequenced in 1985 \citep{Wain-Hobson1985}.
+
+	History of the virus and infected population
+
+	%Gallo1983 was contaminated 
 	
 	%, a rare disorder in the US \citep{Safai1981} that had been seen associated with immunosuppression \citep{Klein1974,Myers1974,Kapadia1977}, and pneumocystis pneumonia, an infection previously reported only in individuals with compromised immune systems \citep{Burke1973,Hughes1977}, in otherwise healthy individuals, often men who have sex with men or intravenous drug users \citep{Gottlieb1981,Friedman-Kien1981,Hymes1981,Masur1981,Siegal1981,Gottlieb1981a}. , a rare tumor now known to be associated with a human herpesvirus \citep{Chang1994,Sitas1999}, and pneumocystis pneumonia, an opportunistic infections,  .  A severe T cells depletion and decrease in cellular immunity was observed in these patients \citep{Masur1981,Siegal1981,Gottlieb1981a,Gerstoft1982,Masur1982}. Potential transmissions by transfusion \citep{Ammann1982,Ehrenkranz1982}, injection drug use \citep{Masur1981,Masur1982,Greene1982} and both homosexual \citep{Fannin1982,Gerstoft1982} and heterosexual \citep{Masur1982,Harris1983} contact were soon observed.
 
-	The virus was isolated \citep{Barre-Sinoussi1983,Popovic1984,Gallo1984}
+	%The virus was isolated \citep{Barre-Sinoussi1983,Popovic1984,Gallo1984}
 
-	Sequenced \citep{Wain-Hobson1985}
+	%Sequenced \citep{Wain-Hobson1985}
 
-	HIV2 \citep{Clavel1986}
+	%HIV2 \citep{Clavel1986}
 
-	First HIV antibody test \citep{Safai1984}
+	%First HIV antibody test \citep{Safai1984}
 
 	Origin in chimpanzee \citep{Gao1999}
 \section{The HIV virus}
@@ -54,11 +60,11 @@
 
 	The most extensive survey of HIV transcripts to date was published in 1993\citep{Purcell1993}. Technology at the time necessitated the use of Northern blots and RNA protection assays \citep{Purcell1993} which can not distinguish multiple similarly sized transcripts or detect rare transcripts. This study also focused on a single lab adapted \hivNL{} strain in HeLa cell culture.
 
-	Many previous studies of viral splicing have used lab-adapted strains of HIV which often differ from patient isolates \citep{Fujita1992} in cell cultures which often differ from primary cells \citep{McAllister1971}. Selection under cell culture conditions may quickly alter splicing patterns to down regulate proteins unneeded \emph{in vitro}. In addition an important subset of HIV are the founder viruses transmitted between hosts \citep{Keele2008,Salazar-Gonzalez2009}. These viruses are not well studied and perhaps their splicing and gene expression differ from the rest of the viral swarm of late-term patients. Characterization of alternative splicing in biologically relevant cell types infected with founder virus and clinical isolates of HIV are sorely needed.
+	Many previous studies of viral splicing have used lab-adapted strains of HIV which often differ from patient isolates \citep{Fujita1992} in cell cultures which often differ from primary cells \citep{McAllister1971}. Selection under cell culture conditions may quickly alter splicing patterns to down regulate proteins unneeded \emph{in vitro}.  Characterization of alternative splicing in biologically relevant cell types infected with clinical isolates of HIV are sorely needed.
 
 
 	%
 \section{RNA detection}
-	First HIV antibody test \citep{Safai1984}
+	First HIV antibody test \citep{Safai1984,Sarngadharan1984}
 
 \end{document}
