--- a/thesis/lamp/lamp.tex
+++ b/thesis/lamp/lamp.tex
@@ -44,7 +44,7 @@
 
 			\begin{figure}
 			\centering
-				\includegraphics[width=\textwidth]{heat.pdf} %REMOVE%
+				\includegraphics[height=.8\textheight]{heat.pdf} %REMOVE%
 			\caption[Summary of amplification results for all the RT-LAMP primer sets tested in this study]{Summary of amplification results for all the RT-LAMP primer sets tested in this study. The data is shown as a heat map, with more intense yellow coloring indicating shorter amplification times (key at bottom). Primer sets tested are named along the left of the figure. Primer sequences, and their organization into LAMP primer sets, are cataloged in S1 and S2 Tables. The raw data and averaged data are collected in S3 and S4 Tables. ACeIN-26 primer set (highlighted) had one of the best performances across the subtypes and a relatively simple primer design.}
 			\label{figPrimers}
 			\end{figure}
@@ -55,8 +55,8 @@
 			\begin{figure}
 			\centering
 			%%[[FIX THIS FIGURE]]
-				\includegraphics[width=.75\textwidth]{consensus.pdf} %REMOVE%
-				\includegraphics[width=.75\textwidth]{bases.pdf} %REMOVE%
+				\includegraphics[width=.6\textwidth]{consensus.pdf} %REMOVE%
+				\includegraphics[width=.6\textwidth]{bases.pdf} %REMOVE%
 			\caption[Bioinformatic analysis to design subtype-agnostic RT-LAMP primers]{Bioinformatic analysis to design subtype-agnostic RT-LAMP primers. A) Conservation of sequence in HIV. HIV genomes (n = 1340) from the Los Alamos National Laboratory collection were aligned and conservation calculated. The x-axis shows the coordinate on the HIV genome, the y-axis shows the proportion of sequences matching the consensus for each 21 base segment of the genome (red points). The black line shows a 101 base sliding average over these proportions. The vertical red shading shows the region targeted for LAMP primer design that was used as input into the EIKEN primer design tool. Numbering is relative to the \hivEight{} sequence. B) Aligned genomes, showing the locations of the ACeIN-26 primers. Sequences in the red shaded region in A are shown, with DNA bases color-coded as shown at the lower right. Each row indicates an HIV sequence and each column a base in that sequence. Horizontal lines separate the HIV subtypes (labeled at right). Arrows indicate the strand targeted by each primer. Primers targeting the negative strand of the virus are shown as reverse compliments for ease of viewing.}
 			\label{figConsensus}
 			\end{figure}
