--- a/thesis/latency/latency.tex
+++ b/thesis/latency/latency.tex
@@ -46,7 +46,7 @@
 		All statistical analysis was performed in R 2.15.2 \citep{RCoreTeam2012}. The analyses are described in a reproducible report (Appendix \ref{appLatencyReport}). The annotated integration site data necessary to perform the analyses and the compilable code to generate this reproducible report are provided as supplemental information \citep{Sherrill-Mix2013}. The new \Memory{} data set was analyzed as in \citet{Berry2006}.  The integration patterns appeared similar to previously reported HIV integration site datasets \citep{Wang2007a}.
 
 	\subsection{Previously published data}
-		We collected integration sites from three previously reported studies (Table \ref{samples}), for a total of four expressed versus silent/inducible pairs of samples. These studies used primary \cdFour{} T cells or Jurkat cells infected with HIV or HIV-derived constructs as cell culture models of latency. Flow cytometry allowed cells expressing viral encoded proteins to be sorted from non-expressing cells. In two of the studies, these non-expressing populations were stimulated to ensure that the provirus could be aroused from latency. Specific differences in protocol between the study sets are summarized below. 
+		We collected integration sites from three previously reported studies (Table \ref{tabLatencySamples}), for a total of four expressed versus silent/inducible pairs of samples. These studies used primary \cdFour{} T cells or Jurkat cells infected with HIV or HIV-derived constructs as cell culture models of latency. Flow cytometry allowed cells expressing viral encoded proteins to be sorted from non-expressing cells. In two of the studies, these non-expressing populations were stimulated to ensure that the provirus could be aroused from latency. Specific differences in protocol between the study sets are summarized below. 
 
 		\emph{\Jurkat{}}. \citet{Lewinski2005} infected Jurkat cells with a VSV-G pseudotyped, GFP-expressing pEV731 HIV construct (LTR-Tat-IRES-GFP) \citep{Jordan2001} at an MOI of 0.1. The cells were sorted into GFP+ and GFP- two to four days after infection. GFP+ cells were sorted again two weeks after infection and cells that were again GFP+ were collected for integration site sequencing. GFP- cells were sorted for GFP negativity twice more then stimulated with TNFalpha. Cells that were GFP+ after stimulation were collected for integration site sequencing. DNA was digested with MseI or a combination of NheI, SpeI and XbaI, ligated to adapters for nested PCR, amplified and sequenced by Sanger capillary electrophoresis. 
 
@@ -80,11 +80,11 @@
 		\end{tabular}
 	}
 	\caption[Integrations from \textit{in vitro} models of latency]{HIV-1 integration datasets from \textit{in vitro} models of latency where the proviruses were determined to be silent/inducible or expressed}
-	\label{samples}
+	\label{tabLatencySamples}
 	\end{table}
 
 	\subsection{Genomic features}
-		A total of \nFeatures{} whole genome features for \cdFour{} T-cells were gathered from data sources indicated in Table \ref{variables}.  For features encoded as peaks or hotspots, the log of the distance of each integration site to the nearest border was used for modeling. Integration sites from HIV 89.6 infection in primary \cdFour{} T cells (unpublished data) were used to count nearby integrations and determine a $\pm20$bp position weight matrix for integration targets. Illumina RNA-Seq from active \cdFour{} cells (unpublished data) was used to estimate raw cellular expression and fragments per kilobase of transcript per million mapped reads for genes as calculated by Cufflinks \citep{Trapnell2010}. For sequence-based data like RNA-Seq and ChIP-Seq, the number of reads aligned within a $\pm$ 50, 500, 5,000 50,000 and 500,000 bp windows of each integration site were counted and log transformed. In addition, chromatin state classifications derived from a hidden Markov model based on histone marks and a few binding factors \citep{Ernst2010} were included as binary variables. All data from previous genomic freezes were converted to hg19 using liftover \citep{Hinrichs2006}. 
+		A total of \nFeatures{} whole genome features for \cdFour{} T-cells were gathered from data sources indicated in Table \ref{tabVariables}.  For features encoded as peaks or hotspots, the log of the distance of each integration site to the nearest border was used for modeling. Integration sites from HIV 89.6 infection in primary \cdFour{} T cells (unpublished data) were used to count nearby integrations and determine a $\pm20$bp position weight matrix for integration targets. Illumina RNA-Seq from active \cdFour{} cells (unpublished data) was used to estimate raw cellular expression and fragments per kilobase of transcript per million mapped reads for genes as calculated by Cufflinks \citep{Trapnell2010}. For sequence-based data like RNA-Seq and ChIP-Seq, the number of reads aligned within a $\pm$ 50, 500, 5,000 50,000 and 500,000 bp windows of each integration site were counted and log transformed. In addition, chromatin state classifications derived from a hidden Markov model based on histone marks and a few binding factors \citep{Ernst2010} were included as binary variables. All data from previous genomic freezes were converted to hg19 using liftover \citep{Hinrichs2006}. 
 
 	\begin{table}
 		\resizebox{\columnwidth}{!}{
@@ -124,43 +124,43 @@
 		\end{tabular}
 		}
 		\caption[Genomic data available for comaprison to integration sites]{Genomic data available for comparison to HIV integration sites}
-		\label{variables} \end{table} %\hline 
+		\label{tabVariables} \end{table} %\hline 
 
 
 \section{Results}
-	The combination of integration site data newly reported here (set named ``\Memory{}'') with previously published data (sets named ``\Jurkat{}'', ``\Bcl{}'', ``\Active{}'', and ``\Resting{}'') provides a collection of \nSites{} integration sites (Table \ref{samples}) where the expression status of the provirus---silent/inducible or expressed---is known. In three of the datasets, \Jurkat{}, \Memory{} and \Bcl{}, the proviruses were sorted based on inducibility. In the \Resting{} and \Active{} datasets, cells were sorted only based on proviral expression. Previous studies have shown that most silent proviruses in this model system are inducible \citep{Plesa2007}.
+	The combination of integration site data newly reported here (set named ``\Memory{}'') with previously published data (sets named ``\Jurkat{}'', ``\Bcl{}'', ``\Active{}'', and ``\Resting{}'') provides a collection of \nSites{} integration sites (Table \ref{tabLatencySamples}) where the expression status of the provirus---silent/inducible or expressed---is known. In three of the datasets, \Jurkat{}, \Memory{} and \Bcl{}, the proviruses were sorted based on inducibility. In the \Resting{} and \Active{} datasets, cells were sorted only based on proviral expression. Previous studies have shown that most silent proviruses in this model system are inducible \citep{Plesa2007}.
 
 	\subsection{Global model}
-		If a genomic feature and latency are monotonically related then we should be able to detect this relationship using Spearman rank correlation. In addition if a feature has a consistent effect across models we should see a consistent pattern in the direction of correlation. A simple first look for correlation between genomic features (Table \ref{variables}) and latency status yielded inconsistent results among the five samples with no variables having a significant Spearman rank correlation across all, or even four out of five, of the samples (Figure \ref{cor}). This suggests that there is not a consistent simple monotonic relationship between the genomic variable and latency, or that any such correlations are modest and not detectable across all studies given the available statistical power. We return to some of the stronger trends below.
+		If a genomic feature and latency are monotonically related then we should be able to detect this relationship using Spearman rank correlation. In addition if a feature has a consistent effect across models we should see a consistent pattern in the direction of correlation. A simple first look for correlation between genomic features (Table \ref{tabVariables}) and latency status yielded inconsistent results among the five samples with no variables having a significant Spearman rank correlation across all, or even four out of five, of the samples (Figure \ref{figCor}). This suggests that there is not a consistent simple monotonic relationship between the genomic variable and latency, or that any such correlations are modest and not detectable across all studies given the available statistical power. We return to some of the stronger trends below.
 
 	%correlation
 	\begin{figure}
 		\centering
 			\includegraphics[width=\textwidth]{variableCorrelationDerep.pdf} %REMOVE%
 		\caption[Correlations of genomic features and latency]{Spearman rank correlation between proviral expression status and genomic features. Only genomic features with at least one correlation with latency with a false discovery rate $q$-value $<0.01$ (marked by asterisks) are shown.}
-		\label{cor}
+		\label{figCor}
 	\end{figure}
 
 		To investigate whether a combination of variables may affect latency, we fit a lasso-regularized logistic regression, as implemented in the R package glmnet \citep{Friedman2010}, to predict latency using the genomic variables. The relationship between silent/inducible status and each genomic variable was allowed to vary between models by including the interaction of genomic features with dummy variables indicating cellular model. The $\lambda$ smoothing parameter of the lasso regression was optimized by finding the $\lambda$ with lowest classification error in 480-fold cross validation and finding the simplest model with misclassification error within one standard error.
 
-		The proportion of silent/inducible sites varied between the samples. To avoid the model overfitting on this source of variation, an indicator variable for each sample was included in the base model. The base model with no genomic variables was selected as the best model by cross validation (Figure \ref{indivFit}A). This suggest that there is not a consistent linear relationship between an additive combination of genomic variables and latency across all models.
+		The proportion of silent/inducible sites varied between the samples. To avoid the model overfitting on this source of variation, an indicator variable for each sample was included in the base model. The base model with no genomic variables was selected as the best model by cross validation (Figure \ref{figIndivFit}A). This suggest that there is not a consistent linear relationship between an additive combination of genomic variables and latency across all models.
 
 		\begin{figure}
 			\centering
 				\includegraphics[width=1\textwidth]{individualFits.pdf} %REMOVE%
 			\caption[Lasso regressions predicting latency]{Misclassification error from cross validation for lasso regressions of silent/inducible status on genomic features as a function of $\lambda$, the regularization coefficient for the lasso regression, for all cell culture models combined and each individual cell culture model. The number of variables included and size of coefficients in the model increases to the left. Whiskers show the standard error of mean misclassification error. Dashed vertical lines indicate the minimum misclassification error and the simplest model within one standard error. Dotted horizontal line indicates the misclassification error expected from random guessing.}
-			\label{indivFit}
+			\label{figIndivFit}
 		\end{figure}
 
 
-		When each dataset was fit individually with leave-one-out cross validation, improvements in cross-validated misclassification error were only observed in the \Active{} (5.8\% decrease in misclassification error, standard error: 2.1) and \Jurkat{} (6.7\% decrease in misclassification error, standard error: 3.5) samples (Figure \ref{indivFit}B-F). There was no overlap in variables selected for the \Active{} and \Jurkat{} samples. %(Additional File 1).
+		When each dataset was fit individually with leave-one-out cross validation, improvements in cross-validated misclassification error were only observed in the \Active{} (5.8\% decrease in misclassification error, standard error: 2.1) and \Jurkat{} (6.7\% decrease in misclassification error, standard error: 3.5) samples (Figure \ref{figIndivFit}B-F). There was no overlap in variables selected for the \Active{} and \Jurkat{} samples. %(Additional File 1).
 
 		Finding little global association between latency and genomic features, we investigated whether predictors of latency reported previously by single studies were consistently associated with latency across studies.
 
 	\subsection{Cellular transcription}
 		Model systems with defined integration sites show upstream transcription can interfere with viral transcription \citep{Greger1998} and that cellular transcription in the same orientation may interfere with viral transcription \citep{Lenasi2008} or increase viral transcription \citep{Han2008} and in opposite orientations may decrease transcription \citep{Han2008}. In integration site studies, integration outside genes appears to increase latency \citep{Lewinski2005} but high transcription of nearby host cell genes may cause increased latency \citep{Lewinski2005,Shan2011}. In addition, Tat or other viral proteins may affect cellular transcription \citep{Marco2008,Chang2011}. %%NEW
 
-		To look at transcription and latency, we ran a logistic regression of silent/inducible status on a quartic function of RNA expression, as determined by RNA-Seq reads within 5,000 bases in Jurkat cells for the \Jurkat{} sample or \cdFour{} T cells for the remaining samples, interacted with indicator variables encoding cell culture model. There appears to be little agreement between samples (Figure \ref{rnaGlm}). The \Resting{} and \Active{} datasets show an enrichment in silent proviruses in regions with low gene expression. The other three studies show the opposite or no relationship for low expression regions. The two samples showing increased silence in areas of low expression  (\Resting{} and \Active{}) are from a study that did not check whether inactive viruses could be activated. One possible explanation is that regions with low gene transcription may harbor proviruses that are not easily activated, though some other discrepancy between \textit{in vitro} systems could also explain the difference. Both the \Jurkat{} and \Active{} samples appear to increase in latency with increasing expression while the remaining three studies did not show a strong trend. 
+		To look at transcription and latency, we ran a logistic regression of silent/inducible status on a quartic function of RNA expression, as determined by RNA-Seq reads within 5,000 bases in Jurkat cells for the \Jurkat{} sample or \cdFour{} T cells for the remaining samples, interacted with indicator variables encoding cell culture model. There appears to be little agreement between samples (Figure \ref{figRnaGlm}). The \Resting{} and \Active{} datasets show an enrichment in silent proviruses in regions with low gene expression. The other three studies show the opposite or no relationship for low expression regions. The two samples showing increased silence in areas of low expression  (\Resting{} and \Active{}) are from a study that did not check whether inactive viruses could be activated. One possible explanation is that regions with low gene transcription may harbor proviruses that are not easily activated, though some other discrepancy between \textit{in vitro} systems could also explain the difference. Both the \Jurkat{} and \Active{} samples appear to increase in latency with increasing expression while the remaining three studies did not show a strong trend. 
 
 	\begin{figure}
 		\centering
@@ -168,12 +168,12 @@
 				\includegraphics[width=0.5\textwidth]{rnaGlm.pdf} %REMOVE%
 			}{
 				\caption[Cellular expression and latency]{Predictions from a logistic regression of silent/inducible status on cellular RNA expression. High y-axis values are predicted to be silent/inducible. Dashed line shows where equal odds of silent/inducible and expressed are predicted. Solid lines show predictions from the regression for each sample and shaded regions indicate one standard error from the modeled predictions.}
-				\label{rnaGlm}
+				\label{figRnaGlm}
 			}
 	\end{figure}
 
 	\subsection{Orientation bias}
-	\citet{Shan2011} reported that inducible proviruses were oriented in the same strand as the host cell genes into which they had integrated more often than chance. This orientation bias was still reproduced after our reprocessing of the \Bcl{} sample from  \citet{Shan2011}. However, the proportion of provirus oriented in the same strand as host genes did not differ significantly from 50\% in the other samples (Figure \ref{orient}). Perhaps orientation bias and transcriptional interference are especially sensitive to parameters of the model system.
+	\citet{Shan2011} reported that inducible proviruses were oriented in the same strand as the host cell genes into which they had integrated more often than chance. This orientation bias was still reproduced after our reprocessing of the \Bcl{} sample from  \citet{Shan2011}. However, the proportion of provirus oriented in the same strand as host genes did not differ significantly from 50\% in the other samples (Figure \ref{figOrient}). Perhaps orientation bias and transcriptional interference are especially sensitive to parameters of the model system.
 	\begin{figure}
 		\centering
 			\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top}}}]{figure}[\FBwidth]{
@@ -181,12 +181,12 @@
 			}{
 				\caption[Strand orientation and latency]{The proportion of provirus integrated in the opposite strand compared to cellular genes in silent/inducible (blue) and expressed (red) samples. Error bars show the 95\% Clopper-Pearson binomial confidence interval.}
 			}
-		\label{orient}
+		\label{figOrient}
 	\end{figure}
 
 
 	\subsection{Gene deserts}
-	\citet{Lewinski2005} reported increased latency in gene deserts. In the collected data, integration outside known genes was associated with latency (Fisher's exact test, $p<10^{-6}$).  This seemed to largely be driven by the \Active{} and \Resting{} samples with significant association found individually in only those two samples (both $p<10^{-8}$) and no significant association observed in the other three samples (Figure \ref{geneDeserts}A). Looking only at integration sites outside genes, silent sites in the \Resting{} sample had a mean distance to the nearest gene 2.5 times greater than that of expressed sites (95\% CI: 2.2--$6.2\times$, $p<10^{-6}$, Welch two sample t-test on log transformed distance) (Figure \ref{geneDeserts}B). The \Active{} sample had a small difference that did not survive Bonferroni correction.
+	\citet{Lewinski2005} reported increased latency in gene deserts. In the collected data, integration outside known genes was associated with latency (Fisher's exact test, $p<10^{-6}$).  This seemed to largely be driven by the \Active{} and \Resting{} samples with significant association found individually in only those two samples (both $p<10^{-8}$) and no significant association observed in the other three samples (Figure \ref{figGeneDeserts}A). Looking only at integration sites outside genes, silent sites in the \Resting{} sample had a mean distance to the nearest gene 2.5 times greater than that of expressed sites (95\% CI: 2.2--$6.2\times$, $p<10^{-6}$, Welch two sample t-test on log transformed distance) (Figure \ref{figGeneDeserts}B). The \Active{} sample had a small difference that did not survive Bonferroni correction.
 
 	\citet{Lewinski2005} also reported decreased latency near CpG islands and reasoned this was tied to the increased latency in gene deserts.  In the \Resting{} sample, silent sites were on average further from CpG islands than expressed sites (Bonferroni corrected Welch's two sample T test, $p=0.006$), but there was no significant relationship between silent/inducible status and log distance to CpG island after Bonferroni correction if the integration site's location inside or outside of a gene was accounted for first (analysis of deviance).
 
@@ -194,14 +194,14 @@
 		\centering
 			\includegraphics[width=\textwidth]{geneDesert.pdf} %REMOVE%
 		\caption[Genes and latency]{(A) The proportion of provirus integrated outside genes in silent/inducible (blue) and expressed (red) samples. Error bars show the 95\% Clopper-Pearson binomial confidence interval. (B) The nearest distance to any gene for integration sites (points) outside genes in the five samples. Points are spread in proportion to kernel density estimates. Horizontal lines indicate sample means where there was a significant difference in means between silent/inducible and expressed provirus (black) or no significant difference (grey).}
-		\label{geneDeserts}
+		\label{figGeneDeserts}
 	\end{figure}
 
 	\subsection{Alphoid repeats} %\citep[reviewed in][]{Waye1987}
 		Alphoid repeats are repetitive DNA sequences found largely in the heterochromatin of centromeres \citep{Waye1987}. Integration near heterochromatic alphoid repeats has been reported to associate with latency \citep{Jordan2003,Lewinski2005,Pace2012}. Looking only at uniquely mapping sites, there was no statistically significant association between latency and location inside an alphoid repeat in pooled or individual samples (Fisher's exact test).
 
 
-		Since alphoid repeats are both problematic to assemble in genomes and difficult to map onto, we reasoned that some alphoid hits might be lost or miscounted in the filtering procedures of the standard workup. To counteract this, we treated each sequence read as an independent observation of a proviral integration and included sequence reads with more than one best scoring alignment. For multiply aligned reads, we considered the read to have been inside an alphoid repeat if any of its best scoring alignments fell within a repeat.  We found 74 reads with potential alphoid mappings.  Integration inside alphoid repeats was significantly associated with the expression status of a provirus in the \Resting{}, \Jurkat{} and \Memory{} datasets (Bonferroni corrected Fisher's exact test, all $p < 0.05$) and approached significance in the \Active{} dataset ($p=0.053$) (Figure \ref{alphoid}). The \Bcl{} data did not contain any integration sites in alphoid repeats, probably due to 1) the relatively low number of integration sites in the dataset and 2) to the requirement for cleavage at two Pst1 restriction sites, which are not found in the consensus sequence of alphoid repeats \citep{Jurka2005}. Of the 1340 repeat types in the RepeatMasker database \citep{Jurka2005}, only alphoid repeats achieved a significant association with proviral expression in more than two datasets.
+		Since alphoid repeats are both problematic to assemble in genomes and difficult to map onto, we reasoned that some alphoid hits might be lost or miscounted in the filtering procedures of the standard workup. To counteract this, we treated each sequence read as an independent observation of a proviral integration and included sequence reads with more than one best scoring alignment. For multiply aligned reads, we considered the read to have been inside an alphoid repeat if any of its best scoring alignments fell within a repeat.  We found 74 reads with potential alphoid mappings.  Integration inside alphoid repeats was significantly associated with the expression status of a provirus in the \Resting{}, \Jurkat{} and \Memory{} datasets (Bonferroni corrected Fisher's exact test, all $p < 0.05$) and approached significance in the \Active{} dataset ($p=0.053$) (Figure \ref{figAlphoid}). The \Bcl{} data did not contain any integration sites in alphoid repeats, probably due to 1) the relatively low number of integration sites in the dataset and 2) to the requirement for cleavage at two Pst1 restriction sites, which are not found in the consensus sequence of alphoid repeats \citep{Jurka2005}. Of the 1340 repeat types in the RepeatMasker database \citep{Jurka2005}, only alphoid repeats achieved a significant association with proviral expression in more than two datasets.
 
 	\begin{figure}
 		\centering
@@ -209,28 +209,28 @@
 				\includegraphics[width=0.5\textwidth]{alphoidBar.pdf} %REMOVE%
 			}{
 				\caption[Alphoid repeats and latency]{The proportion of integration sites with matches in alphoid repeats in silent/inducible (blue) and expressed (red) cells in five samples. Error bars show the 95\% Clopper-Pearson binomial confidence interval. Asterisks indicate significant associations between integrations within an alphoid repeat and proviral expression status (Bonferroni corrected Fisher's exact test $p<0.05$).}
-				\label{alphoid}
+				\label{figAlphoid}
 			}
 	\end{figure}
 
 	\subsection{Acetylation}
 	Histone marks or chromatin remodeling, especially involving the key ``Nuc-1'' histone near the transcription start site in the viral LTR, appear to affect viral expression \citep{Verdin1993,Lint1996,Pearson2008}. Based on this effect, histone deacetylase inhibitors have been developed as potential HIV treatments and show some promise in disrupting latency \citep{Archin2012}. In these genome-wide datasets, we do not have information on the state of individual LTR nucleosomes. However, repressive chromatin does seem to spread to nearby locations if not blocked by insulators \citep{Muller1930,Gaszner2006} and the state of neighboring chromatin could affect proviral transcription independently of provirus-associated histones. 
 
-	We found that the number of ChIP-seq reads near an integration site from several histone acetylation marks (Figure \ref{cor}) were associated with efficient expression in the \Active{}, \Resting{} and \Memory{} samples. H4K12ac had the strongest association (Bonferroni corrected Fisher's method combination of Spearman's $\rho$, $p<10^{-25}$) with silence/latency (Figure \ref{acetylation}A).
+	We found that the number of ChIP-seq reads near an integration site from several histone acetylation marks (Figure \ref{figCor}) were associated with efficient expression in the \Active{}, \Resting{} and \Memory{} samples. H4K12ac had the strongest association (Bonferroni corrected Fisher's method combination of Spearman's $\rho$, $p<10^{-25}$) with silence/latency (Figure \ref{figAcetylation}A).
 	
-	Although the appearance of several significantly associated acetylation marks might suggest acetylation exerts a considerable effect on the expression of a provirus, there are strong correlations among these marks, so their effects may not be independent.  To account for the correlations between these variables, we performed a principal component analysis (PCA) to convert the correlated acetylation marks into a series of uncorrelated principal components that capture much of the variance within a few components. Here, the first principal component explained 59\% of the variance and the first ten components 84\%. Several of these principal components again displayed significant associations with latency in the \Active{}, \Resting{} and \Memory{} samples but no significant correlations in the \Bcl{} or \Jurkat{} samples (Figure \ref{acetylation}B). A logistic regression of expression status on the first ten principal components and sample did not reduce misclassification error from a base model including only sample in 480-fold cross validation (base model misclassification error: 36.4\%, PCA model: 36.5\%). This suggests that acetylation of neighboring chromatin does not exert strong effects on latency in all samples.
+	Although the appearance of several significantly associated acetylation marks might suggest acetylation exerts a considerable effect on the expression of a provirus, there are strong correlations among these marks, so their effects may not be independent.  To account for the correlations between these variables, we performed a principal component analysis (PCA) to convert the correlated acetylation marks into a series of uncorrelated principal components that capture much of the variance within a few components. Here, the first principal component explained 59\% of the variance and the first ten components 84\%. Several of these principal components again displayed significant associations with latency in the \Active{}, \Resting{} and \Memory{} samples but no significant correlations in the \Bcl{} or \Jurkat{} samples (Figure \ref{figAcetylation}B). A logistic regression of expression status on the first ten principal components and sample did not reduce misclassification error from a base model including only sample in 480-fold cross validation (base model misclassification error: 36.4\%, PCA model: 36.5\%). This suggests that acetylation of neighboring chromatin does not exert strong effects on latency in all samples.
 
 	\begin{figure}
 		\centering
 			\includegraphics[width=\textwidth]{acetylation.pdf} %REMOVE%
 		\caption[Acetylation and latency]{(A) The number of ChIP-seq reads for H4K12ac, the histone mark with the lowest Fisher's method $p$-value for correlation with latency, within 50,000 bases across the five samples. Integration sites (points) are spread in proportion to kernel density estimates. Horizontal lines indicate sample means where there was a significant difference (black) in means between silent/inducible and expressed provirus or no significant difference (grey). (B) The correlation (points) and its 95\% confidence interval (vertical lines) between principal components of acetylation and silent/inducible status for each of the five samples. Red indicates correlations with a Bonferroni-corrected $p$-value $< 0.05$.}
-		\label{acetylation}
+		\label{figAcetylation}
 	\end{figure}
 
 
 
 	\subsection{Clustering}
-	 We reasoned that if there was a strong relationship between latency and chromosomal position, then integration sites that are near one another on the same chromosome should share the same expression status more often than expected by chance. To test this, we compared how often pairs of proviruses shared the same expression status in relation to the distance between the two sites (Figure \ref{neighbor}). Pairs of sites with little distance between integration locations did share the same expression status more often than expected by chance (e.g.\  neighbors closer than 100bp, Fisher exact test $p=0.0002$). Breaking out the data to separate between sample and within sample pairings showed that this matching was limited to neighbors within the same experimental model (Figure \ref{neighbor}), emphasizing that chromosomal environment does appear to influence latency, but the factors involved differ among experimental models of latency. 
+	 We reasoned that if there was a strong relationship between latency and chromosomal position, then integration sites that are near one another on the same chromosome should share the same expression status more often than expected by chance. To test this, we compared how often pairs of proviruses shared the same expression status in relation to the distance between the two sites (Figure \ref{figNeighbor}). Pairs of sites with little distance between integration locations did share the same expression status more often than expected by chance (e.g.\  neighbors closer than 100bp, Fisher exact test $p=0.0002$). Breaking out the data to separate between sample and within sample pairings showed that this matching was limited to neighbors within the same experimental model (Figure \ref{figNeighbor}), emphasizing that chromosomal environment does appear to influence latency, but the factors involved differ among experimental models of latency. 
 
 	\begin{figure}
 		\centering
@@ -238,7 +238,7 @@
 				\includegraphics[width=0.5\textwidth]{neighborMatch.pdf} %REMOVE%
 			}{
 				\caption[Shared expression status between near neighbors]{The ratio of the number of pairs of proviruses with matching expression status to the number of matches expected by random pairings given the frequency of silent/inducible proviruses. All possible pairs of proviruses integrated within a given distance of each other on the same chromosome (red line) were separated into two sets; one with both proviruses from within the same cell culture model and one with proviruses paired between two different cell culture models (black lines).  The shaded region shows the 95\% Clopper-Pearson binomial confidence interval for within and between sample pairings. The dashed horizontal line shows the ratio of 1 expected if there is no association between the expression status of neighboring proviruses.}
-			\label{neighbor}
+			\label{figNeighbor}
 			}
 	\end{figure}
 
@@ -256,7 +256,7 @@
 
 	Inaccurate staining or leaky markers may also result in misclassification of proviruses. False positives and false negatives will result in incorrectly sorted latent and expressed integrations. For example, if 5\% of cells not containing Gag are labeled as Gag+ and there are an equal amount of latent and expressed integration sites, then 4.8\% of integrations labeled expressed will actually be latent. If a category is rare, false staining has even greater potential to cause error. For example, if only 5\% of sites are latent and a Gag stain has a false negative rate of 5\%, then we would expect 48.7\% of sites classified as latent to actually be mislabeled expressed integrations.
 
-	Attempts to induce latent proviruses in patients have so far focused on using histone deacetylase inhibitors, raising interest in associations with histone acetylation in these data. An important caveat in results from these genome-wide data is that histone modification near the integrated provirus may not be representative of modification within the provirus at the key ``Nuc-1'' nucleosome of the transcription start site \citep{Lint1996}, though local correlations in chromatin states are well established from studies of position effect variegation \citep{Muller1930,Gaszner2006}. We found that some histone acetylation marks were significantly associated with viral expression in some but not all samples (Figures \ref{cor}, \ref{acetylation}). This lack of association may be due to a lack of power in these studies, but the confidence intervals suggest that any correlations between acetylations and latency are unlikely to be strong.  These weak correlations raise the possibility that there are populations of latent proviruses that are not associated with acetylation and may not be inducible by histone deacetylase inhibitors.
+	Attempts to induce latent proviruses in patients have so far focused on using histone deacetylase inhibitors, raising interest in associations with histone acetylation in these data. An important caveat in results from these genome-wide data is that histone modification near the integrated provirus may not be representative of modification within the provirus at the key ``Nuc-1'' nucleosome of the transcription start site \citep{Lint1996}, though local correlations in chromatin states are well established from studies of position effect variegation \citep{Muller1930,Gaszner2006}. We found that some histone acetylation marks were significantly associated with viral expression in some but not all samples (Figures \ref{figCor}, \ref{figAcetylation}). This lack of association may be due to a lack of power in these studies, but the confidence intervals suggest that any correlations between acetylations and latency are unlikely to be strong.  These weak correlations raise the possibility that there are populations of latent proviruses that are not associated with acetylation and may not be inducible by histone deacetylase inhibitors.
 
 
 	This study highlights that the choice of model system can have a large effect on measurements of latency. Further studies are needed to determine which \textit{in vitro} models best reflect latency \textit{in vivo}. Different cell models may report genuinely different mechanisms of latency. While we did see some relationship between histone acetylation and latency, paralleling a recent clinical trial of SAHA \citep{Archin2012}, associations with histone acetylation did not explain a large fraction of the difference between latent and expresssed proviruses in any of the five models. One possible explanation is that there  may be multiple mechanisms that maintain proviruses in a latent state. To be successful, shock-and-kill treatments must induce and destroy all latent proviruses to eliminate HIV from an infected individual, raising the question of whether multiple simultaneous inducing treatments will be necessary. %NEW
