--- a/thesis/penn_thesis_style.sty
+++ b/thesis/penn_thesis_style.sty
@@ -60,7 +60,7 @@
 \addtolength{\cfttabnumwidth}{\mylent} % add the extra space
 \usepackage{remreset}
 
-% Format Illusstrations in LoF
+% Format Illustrations in LoF
 \renewcommand{\cftfigleader}{\cftdotfill{\cftdotsep}}
 \renewcommand{\cftfigpresnum}{FIGURE }
 \renewcommand{\cftfigaftersnum}{ :}
@@ -94,9 +94,9 @@
 
 \usepackage{parskip} % To allow for better management of the Dutch paragraph style
 \usepackage{url} % To allow for better typing of the url in the Creative Commons part of the copyright
-\usepackage[sort,compress]{natbib} % allows the author-date citation system
+\usepackage[sort,compress,super,comma]{natbib} % allows the author-date citation system
 %\bibpunct{(}{)}{;}{a}{,}{,} % options for natbib to yield the citation style I like
-\bibpunct{[}{]}{,}{n}{,}{,} % options for natbib
+%\bibpunct{[}{]}{,}{n}{,}{,} % options for natbib
 
 % Other packages that are not needed for the template, but I highly recommend (and all of your own packages go here to)
 % Add them one by one to make sure they do not interfere, for instance the package subfigure clashes with this template
@@ -114,30 +114,40 @@
 \usepackage{subfiles} % To be better able to manage large projects by compiling the separate files included in the final document
 
 
+
+
+%preliminary chapter formatting
+\newenvironment{preliminary}{
+	\titleformat{\chapter}[hang]{\large\center}{\thechapter}{0 pt}{}
+	\titlespacing*{\chapter}{0pt}{-33 pt}{6 pt} % The key value here is the -33 pts, I got to it by old fashioned measuring with a ruler....
+}{}
+
+
+
 \usepackage[toc]{appendix} %for appendices
 \renewcommand\appendixtocname{APPENDICES}
 % Changing formatting for appendices
 \newenvironment{appendixf}{
-%\titleformat{\chapter}[hang]{\large\center}{APPENDIX}{0 pt}{} % Old {APPENDIX \thechapter}{0 pt}{ : }
-\titleformat{\chapter}[hang]{\Large\center}{APPENDIX \thechapter}{0 pt}{ : }
-%\renewcommand{\cftchappresnum}{APPENDIX }
-\titlespacing*{\chapter}{0pt}{-33 pt}{6 pt} % The key value here is the -33 pts, I got to it by old fashioned measuring with a ruler....
-\clearpage
-\begin{appendices}
-\renewcommand{\thechapter}{A.\arabic{chapter}}
-\setcounter{tocdepth}{1} % Only show chapters, sections of Appendix in ToC
-\makeatletter
-	\addtocontents{toc}{%
-			\begingroup
-			\string\let\string\l@chapter\string\l@section
-			\string\let\string\l@section\string\l@subsection
-			%\let\protect\l@chapter\protect\l@section
-			%\let\protect\l@section\protect\l@subsection
-	}
-\makeatother
+	%\titleformat{\chapter}[hang]{\large\center}{APPENDIX}{0 pt}{} % Old {APPENDIX \thechapter}{0 pt}{ : }
+	\titleformat{\chapter}[hang]{\Large\center\bfseries}{APPENDIX \thechapter}{0 pt}{ : }
+	%\renewcommand{\cftchappresnum}{APPENDIX }
+	\titlespacing*{\chapter}{0pt}{-33 pt}{6 pt} % The key value here is the -33 pts, I got to it by old fashioned measuring with a ruler....
+	\clearpage
+	\begin{appendices}
+	\renewcommand{\thechapter}{A.\arabic{chapter}}
+	\setcounter{tocdepth}{1} % Only show chapters, sections of Appendix in ToC
+	\makeatletter
+		\addtocontents{toc}{%
+				\begingroup
+				\string\let\string\l@chapter\string\l@section
+				\string\let\string\l@section\string\l@subsection
+				%\let\protect\l@chapter\protect\l@section
+				%\let\protect\l@section\protect\l@subsection
+		}
+	\makeatother
 }{
-\addtocontents{toc}{\endgroup}
-\end{appendices}
+	\addtocontents{toc}{\endgroup}
+	\end{appendices}
 }
 
 %try to fix bad lines
@@ -146,10 +156,10 @@
 
 \renewcommand\bibname{BIBLIOGRAPHY}
 \newenvironment{bibliof}{
-\titleformat{\chapter}[hang]{\Large\center}{\thechapter}{0 pt}{}
-\titlespacing*{\chapter}{0pt}{-25 pt}{6 pt} % The key value here is the -25 pts, I got to it by old fashioned measuring with a ruler....
-\singlespacing
-\addcontentsline{toc}{chapter}{\bibname}
+	\titleformat{\chapter}[hang]{\Large\center\bfseries}{\thechapter}{0 pt}{}
+	\titlespacing*{\chapter}{0pt}{-25 pt}{6 pt} % The key value here is the -25 pts, I got to it by old fashioned measuring with a ruler....
+	\singlespacing
+	\addcontentsline{toc}{chapter}{\bibname}
 }{}
 
 %extra stuff that's not really important
