Sent abstract to Rick
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@9936 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/intro/intro.tex
+++ b/thesis/intro/intro.tex
@@ -9,19 +9,23 @@
 	
 	Pneumocystis pneumonia was known to be caused by infection of the alveoli with the yeast-like fungus \emph{Pneumocystis jirovecii} \citep{Burke1973,Hughes1977}, previously known as \emph{Pneumocystis carinii} \citep{Stringer2009}. Pneumocystis pneumonia was almost exclusively seen only in patients with suppressed immune systems or immune disorders and rarely if ever in immunocompetent individuals \citep{Hughes1977}.
 
-	The mechanism for this spike of these opportunistic infection was clarified when researchers found severe T cells depletion and decreases in cellular immunity in these patients \citep{Masur1981,Siegal1981,Gottlieb1981a,Gerstoft1982,Masur1982} and termed the disease acquired immunodeficiency syndrome (AIDS). However, the underlying cause remained unclear. Potential transmissions by transfusion \citep{Ammann1982,Ehrenkranz1982,Poon1982}, injection drug use \citep{Masur1981,Masur1982,Greene1982}, maternal transmission \citep{OReilly1982} and both homosexual \citep{Fannin1982,Gerstoft1982} and heterosexual \citep{Masur1982,Harris1983} contact pointed towards an infectious agent. In 1983, a virus named lymphadenopathy-associated virus or human T-lymphotropic viruses III and later renamed human immunodefficiency virus type 1 (HIV-1) was isolated from patient samples \citep{Barre-Sinoussi1983,Gallo1983,Popovic1984,Levy1984} and soon detected in most immunodeficient patients \citep{Gallo1984,Sarngadharan1984,Safai1984,Levy1984}. The virus was sequenced in 1985 \citep{Wain-Hobson1985}. [[fix passive]][[last sentence sucks]]
+	The mechanism for this spike of these opportunistic infection was clarified when researchers found severe T cells depletion and decreases in cellular immunity in these patients \citep{Masur1981,Siegal1981,Gottlieb1981a,Gerstoft1982,Masur1982} and termed the disease acquired immunodeficiency syndrome (AIDS). However, the underlying cause remained unclear. Potential transmissions by transfusion \citep{Ammann1982,Ehrenkranz1982,Poon1982}, injection drug use \citep{Masur1981,Masur1982,Greene1982}, maternal transmission \citep{OReilly1982} and both homosexual \citep{Fannin1982,Gerstoft1982} and heterosexual \citep{Masur1982,Harris1983} contact pointed towards an infectious agent. In 1983, a virus named lymphadenopathy-associated virus or human T-lymphotropic viruses III and later renamed human immunodefficiency virus type 1 (HIV-1) was isolated from patient samples \citep{Barre-Sinoussi1983,Gallo1983,Popovic1984,Levy1984} and soon detected in most immunodeficient patients \citep{Gallo1984,Sarngadharan1984,Safai1984,Levy1984}.  [[fix passive]]
 
-	Reports of AIDS and associated opportunistic infections in sub-Saharan Africa soon revealed widespread endemic infection \citep{Clumeck1983,Clumeck1984,VandePerre1984,Piot1984}. Further studies revealed widespread infection and a great diversity of viruses \citep{Nkengasong1994,Louwagie1995,Vidal2000,Rambaut2001,Yang2001,Kalish2004}. Retrospective studies suggested that the virus had been present in Africa prior to its recognition in the USA \citep{Bygbjerg1983,Vandepitte1983,Clumeck1984} and circulating in Europe and USA for several decades \citep{Froland1988,Garry1988} and isolates from as early as 1959 showing already existing viral diversification have been found from what is now Kinshasa, Democratic Republic of Congo \citep{Nahmias1986,Zhu1998,Worobey2008}. A virus similar to HIV-1 was observed in chimpanzees \citep{Peeters1989,Huet1990} and survey of wild chimpanzees revealed a likely origin of HIV-1 in a zoonotic transmission, perhaps from harvesting of chimpanzees for food \citep{Bowen-Jones1999,Hahn2000,Peeters2002,Wolfe2004,Wolfe2005,Kalish2005}, in southeast Cameroon \citep{Gao1999,Keele2006,VanHeuverswyn2007} from which the virus was transported to an epicenter in the city of Kinshasha \citep{Vidal2000,Vangroenweghe2001,Worobey2008,Sharp2008,Faria2014}. With a most recent common ancestor of HIV-1 M type estimated in the early 1900s \citep{Korber2000,Salemi2001,Sharp2001,Yusim2001,Worobey2008,Faria2014}. Zoonotic transmissions had probably occurred previously but a combination of social upheaval, mobilization, urbanization and mass vaccination campaigns with unsterilized needles provided the ingredients for a growing epidemic \citep{Chitnis2000,deSousa2010,deSousa2012,Faria2014}. The virus may have moved from Africa to Haiti in the 1960s and into the US in the 1970s \citep{Gilbert2007}. [[mention clade B in haiti and widespread but many more in africa and worldwide starburst]]
+	Reports of AIDS and associated opportunistic infections in sub-Saharan Africa soon revealed widespread endemic infection \citep{Clumeck1983,Clumeck1984,VandePerre1984,Piot1984} and a great diversity of viruses \citep{Nkengasong1994,Louwagie1995,Vidal2000,Rambaut2001,Yang2001,Kalish2004}. Retrospective studies suggested that the virus had been present in Africa prior to its recognition in the USA \citep{Bygbjerg1983,Vandepitte1983,Clumeck1984} and circulating in Europe and USA for several decades \citep{Froland1988,Garry1988}. Isolates from what is now Kinshasa, Democratic Republic of Congo from as early as 1959 showed already existing viral diversification have been found \citep{Nahmias1986,Zhu1998,Worobey2008}. A virus similar to HIV-1 was observed in chimpanzees \citep{Peeters1989,Huet1990} and survey of wild chimpanzees revealed a likely origin of HIV-1 was from a zoonotic transmission, perhaps from harvesting of chimpanzees for food \citep{Bowen-Jones1999,Hahn2000,Peeters2002,Wolfe2004,Wolfe2005,Kalish2005}, in southeast Cameroon \citep{Gao1999,Keele2006,VanHeuverswyn2007} from which the virus was transported to an epicenter in the city of Kinshasha \citep{Vidal2000,Vangroenweghe2001,Worobey2008,Sharp2008,Faria2014}.
+	%siv cpz is itself a recombinate http://www.sciencemag.org/content/300/5626/1713.full
+	
+	With a most recent common ancestor of HIV-1 M type estimated in the early 1900s \citep{Korber2000,Salemi2001,Sharp2001,Yusim2001,Worobey2008,Faria2014}. Zoonotic transmissions had probably occurred previously but a combination of social upheaval, mobilization, urbanization and mass vaccination campaigns with unsterilized needles appear to have provided fuel for the growing epidemic \citep{Chitnis2000,deSousa2010,deSousa2012,Faria2014}. The virus may have moved from Africa to Haiti in the 1960s and into the US in the 1970s \citep{Gilbert2007}. [[mention clade B in haiti and widespread but many more in africa and worldwide starburst]]
 
+	%rare but present in 1978 in SF \citep{Echenberg1985} and NYC \citep{Stevens}
 	%Antia 2003 Nature evolve in chain of transmission with R0<1
 
 	The successful trial of the reverse transcriptase inhibitor azidothymidine provided the first hope for treatment HIV in 1987 \citep{Fischl1987,Fischl1989,Volberding1990} but it soon became apparent that the fast mutation rate of HIV \citep{Hahn1986,Preston1988,Roberts1988,Mansky1995,Mansky1996,Abram2010,Achuthan2014} and strong selection by drug therapy could quickly create drug-resistant forms of virus in patients receiving single drug therapy \citep{Larder1989,Larder1989a,Land1990,Boucher1990,Richman1990,Richman1991,Fitzgibbon1992,Richman1994,Schuurman1995,Schmit1996} or even sequential administration of multiple drugs \citep{Kahn1992,Abrams1994,deJong1994,Schmit1996a}. Synergistic combinations of antiretroviral drugs \citep{Dornsife1991,Johnson1991,Cox1994,Feng2009,Jilek2012,Kulkarni2014} and the difficulty of evolving multiple drug resistant mutations therapy \citep{Chow1993,Larder1995} [[more refs here]] meant that therapy using simultaneous combinations of drugs finally began to offer patients more hope of long term survival \citep{Collier1993,Eron1995,Collier1996,Hammer1996,Saravolatz1996,Darbyshire1996,Hammer1997,Gulick1997,Moore1999}.
 
-http://jid.oxfordjournals.org/content/174/5/962
+	%global epidemic ("transmission partners") \citep{Wertheim2014}
 
 	%larder1993 multidrug resistant mutations in vitro
 
-	Median survival after diagnosis with AIDS of about 1 year untreated \citep{Rothenberg1987,Vella1992} and around 2 years with AZT treatment \citep{Creagh-Kirk1988,Fischl1989,Moore1992,Vella1992} Many types of opportunistic infections and poor survival times \citep{Moore1996}
+	Median survival after diagnosis with AIDS of about 1 year untreated \citep{Rothenberg1987,Vella1992} and around 2 years with AZT treatment \citep{Creagh-Kirk1988,Fischl1989,Moore1992,Vella1992}. In patients in Haiti treated for symptoms but not with antiretrovirals, the median time to AIDS was 5.2 years and to death was 7.4 years \citep{Deschamps2000}. Many types of opportunistic infections and poor survival times \citep{Moore1996}. 4.5 years to AIDS in transfusions \citep{Lui1986}.
 	%moore1992 survive >900 days median if >150 CD4 baseline
 
 	%Sharp2001 HIV m n o three separate cpz
@@ -44,12 +48,68 @@ http://jid.oxfordjournals.org/content/174/5/962
 	%Origin in chimpanzee \citep{Gao1999}
 
 \section{The HIV virus}
+HIV is an enveloped single strand positive-sense retrovirus, an RNA virus which uses reverse transcription to create a DNA intermediate in host cells \citep{Baltimore1970,Temin1970}. Viral encoded integrase protein discovered \citep{Grandgenett1978} and mapped to \threePrime{} end of pol \citep{Panganiban1984,Schwartzberg1984,Donehower1984} through mutation and loss of function.  Mutations at ends also results in defective viruses \citep{Panganiban1983}.
+
+The HIV genome encodes genes for at least two polyproteins and seven proteins:\\ % \gag{} and \pol{}, and seven proteins, \tat{}, \rev{}, \nef{}, \vpr{}, \vif{} and \vpu{}.
+\begin{description}
+	\item[\gag{}]
+		Gag (group specific antigen) is cleaved by viral protease to produce matrix, capsid, nucleocapsid and P6 protein along with two small spacer peptides SP1 and SP2. 
+		\begin{description}
+			\item[MA]
+			\item[CA]
+			\item[NC]
+			\item[P6]
+		\end{description}
+			
+
+	\item[\pol{}]
+		Pol (polymerase) is cleaved by viral protease to produce reverse transcriptase, RNaseH, integrase and HIV protease. 
+		\begin{description}
+			\item[RT]
+			\item[RNase H]
+			\item[IN]
+			\item[PR]
+		\end{description}
+	\item[\env{}]
+		gp160 Env proteins traps CD4 in the endoplasmic reticulum \citep{Crise1990,Bour1991}
+	\item[\tat{}]
+		%http://www.sciencemag.org/content/260/5112/1320.abstract6
+	\item[\rev{}]
+	\item[\nef{}]
+			Nef (negative factor) is a myristoylated membrane associated protein \citep{Yu1992} that is involved in multiple functions. Nef causes endocytosis of the HIV receptors CD4 \citep{Garcia1991,Benson1993,Aiken1994,Lama1999,Ross1999} and CCR5 \citep{Michel2005} and viral surveillance major histocompatibility complex molecules \citep{Schwartz1996,Collins1998,Stumptner-Cuvelette2001,Blagoveshchenskaya2002}. Nef also induces T cell activation through interactions with signaling kinases and the T cell receptor \citep{Xu1999,Schrager1999,Wang2000,Simmons2001,Schrager2002}. In contrast, Nef in most other primate lentiviruses inhibits activation and inflammation \citep{Schindler2006} perhaps indicating that the gain of \vpu{} in HIV-1 and its simian relatives allowed the loss of the immune inhibition traits of \nef{} and contributes to the increased pathogenecity in these viruses \citep{Kirchoff2008,Kirchoff2009}.
+	\item[\vpr{}]
+	\item[\vif{}]
+		Vif (viral infectivity factor) counteracts the cellular restriction factor APOBEC3G \citep{Sheehy2002} by excluding APOBEC3G from incorporation into the virion \citep{Mariani2003} and causing APOBEC3G to be ubiquitinated and degraded \citep{Sheehy2003,Marin2003,Yu2003}. APOBEC3G is otherwise packaged into virions \citep{Harris2003} and deaminates the HIV genome during reverse transcription causing G-to-A hypermutation \citep{Harris2003,Mangeat2003,Zhang2003,Lecossier2003}.
+	\item[\vpu{}]
+		Vpu (viral protein U) \citep{Cohen1988,Strebel1988} is a small integral membrane protein which has two known functions; degradation of CD4 and downregulation of BST-2 from the cell membrane [[cites]]. Vpu causes cellular CD4 to be ubiquitinated and degraded \citep{Willey1992,Bour1995} which prevents interactions between progeny virus Env and host cell CD4 \citep{Marshall1992,Lama1999,Ross1999,Cortes2002} and superinfection by other viruses \citep{Benson1993}  while also releasing Env proteins from CD4 interactions in the endoplasmic reticulum \citep{Crise1990,Bour1991}. Vpu also counteracts the cellular restriction factor BST-2, which would otherwise interfere with viral budding \citep{Neil2008}. Vpu does not appear to be found in the virion \citep{Strebel1989}.
+		%cd4 degradation 
+		%http://www.nature.com/nrmicro/journal/v7/n6/full/nrmicro2111.html
+\end{description}
+
+
+
+
+
+
+
+
+%pre integration complex \citep{Bowerman1989}. extracts from HIV infected cells able to integrate in cell free system \citep{Ellison1990,Farnet1990} contains integrase and matrix and RT \citep{Farnet1991,Bukrinsky1993} %farnet1991 says int only
+%integrase alone can integrate HIV DNA\citep{Busman1990}
+
+long terminal repeats at each end \citep{Hughes1978}. integrates in many locations \citep{Hughes1978}
+
+
+%nobels prophage \citep{Lwoff1966} provirus \citep{Temin1976} %dna complementary to rna \citep{Neiman1972} and DNA from RSV transformed cells can transform cells \citep{Hill1972}.
+The virus was sequenced in 1985 \citep{Wain-Hobson1985}.
+
 retrovirus, two single stranded RNA genomes (recombination), RT, integration,
 
 HIV diversification within a single patient in env loop \citep{Holmes1992} positive selection \citep{Bonhoeffer1995,Ross2002} positive selection at same sites over time correlate with slower progression \citep{Wolinsky1996,Ross2002} 1\% distance increase diversity in env per year (decreases later in infection) \citep{Shankarappa1999}
 
 half life of 2 days and $10^9$ CD4 T cells per day \citep{Ho1995,Wei1995}
 \section{Integration and latency}
+	cells can produce virus without cell death in vitro \citep{Hoxie1985}
+	first latent HIV \citep{Folks1986}
 \section{Host cell interactions}
 \section{Repetitive elements}
 \section{HIV splicing}
